--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									<span class="image">
 										<img src="images/venmo.jpg" alt="" />
 									</span>
-									<a href="venmo2.html">
+									<a href="venmo.html">
 										<h2>Venmo</h2>
 										<div class="content">
 											<p>Interviewing users on their Venmo experince, culiminating
@@ -94,9 +94,9 @@
 										<img src="images/animal.png" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Tempus</h2>
+										<h2>The SQL</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Creating a dynamic webpage with a PHP server, login functionality, and a SQL database in the backend.</p>
 										</div>
 									</a>
 								</article>
