Added new blog posts!

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 									<span class="image">
 										<img src="images/movie.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="d3.html">
 										<h2>Data Driven Web Applications</h2>
 										<div class="content">
 											<p>Visualizing movie data in D3.js</p>
@@ -93,7 +93,7 @@
 									<span class="image">
 										<img src="images/animal.png" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="animals.html">
 										<h2>The SQL</h2>
 										<div class="content">
 											<p>Creating a dynamic webpage with a PHP server, login functionality, and a SQL database in the backend.</p>
@@ -102,49 +102,49 @@
 								</article>
 								<article class="style5">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="https://static.wixstatic.com/media/a27d24_9e05600d592947f7b83dce93ef65f14a~mv2.png/v1/fill/w_631,h_635,al_c,usm_0.66_1.00_0.01/a27d24_9e05600d592947f7b83dce93ef65f14a~mv2.png" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Aliquam</h2>
+									<a href="design4good.html">
+										<h2>Designing for Social Impact</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>NaTakallam connects multilingual refugees with language learners through a video conferencing.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style6">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<img src="http://blogs.discovermagazine.com/crux/files/2018/02/startup.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Veroeros</h2>
+									<a href="vc.html">
+										<h2>Lessons from the Best Startups</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>What working in VC taught me about how the best startups operate.</p>
 										</div>
 									</a>
 								</article>
 								<article class="style2">
 									<span class="image">
-										<img src="images/pic07.jpg" alt="" />
+										<img src="https://cdn-images-1.medium.com/max/1600/1*doISq7nDJgKnuvp9UjlALA.jpeg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Ipsum</h2>
+									<a href="robots.html">
+										<h2>TechCrunch Robotics at MIT</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>I had the pleasure of attending the Tech Crunch Robotics conference at MIT</p>
 										</div>
 									</a>
 								</article>
 								<article class="style3">
 									<span class="image">
-										<img src="images/pic08.jpg" alt="" />
+										<img src="https://www.scalevp.com/sites/default/files/designbig.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Dolor</h2>
+									<a>
+										<h2>Coming soon...</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p> I am just starting my career as a product designer, and I am excited for the road ahead!</p>
 										</div>
 									</a>
 								</article>
-								<article class="style1">
+								<!-- <article class="style1">
 									<span class="image">
 										<img src="images/pic09.jpg" alt="" />
 									</span>
@@ -187,7 +187,7 @@
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
 									</a>
-								</article>
+								</article> -->
 							</section>
 						</div>
 					</div>
