--- a/animals.html
+++ b/animals.html
@@ -26,11 +26,11 @@
 								</a>
 
 							<!-- Nav -->
-								<nav>
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
@@ -79,18 +79,18 @@
 									<strong>Image 1:</strong>  When an image is clicked, display more information about that image.
 								</p>
 								<p class="aa-para">
-									This is done by taking the image id from the post request (URL) and creating a SQL query to display information from the database corresponding to the key of that animal. 
+									This is done by taking the image id from the post request (URL) and creating a SQL query to display information from the database corresponding to the key of that animal.
 								</p>
 								<p class="aa-para">
-									<strong>Image 2:</strong> Setting the index page to show the images from the SQL gallery .</p> 
+									<strong>Image 2:</strong> Setting the index page to show the images from the SQL gallery .</p>
 								<p class="aa-para">
 									This snippet of code includes a "PHP includes" which generates HTML code that is consistent across multiple pages, in this case code corresponding to reading the database. The code also includes opening the SQL database so that the rest of the index PHP code can read from the database, and a init SQL database call. What this means is that if there is no existing database the webpage automatically generates a new one.
 								</p>
 								<p>
-									<strong>Image 3:</strong> Implementing SQL schema into code that generates a image gallery. 
+									<strong>Image 3:</strong> Implementing SQL schema into code that generates a image gallery.
 								</p>
 								<p>
-									This code snippet creates a gallery table which provides keys for each image that will be in the database, as well as attributes about that image such as its file extension, the URL source, the user who uploaded, etc. 
+									This code snippet creates a gallery table which provides keys for each image that will be in the database, as well as attributes about that image such as its file extension, the URL source, the user who uploaded, etc.
 								</p>
 								<div class="aa-sectioning2">
 									<img src="https://static.wixstatic.com/media/f0a7d3_b5fa7da49fe147828a1d9d20027df868~mv2.png/v1/fill/w_250,h_250,fp_0.50_0.50,q_90,usm_0.66_1.00_0.01/f0a7d3_b5fa7da49fe147828a1d9d20027df868~mv2.webp">
@@ -110,56 +110,31 @@
 						</div>
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+					<!-- Footer -->
+						<footer id="footer">
+							<div class="inner">
+											<section>
+												<h2>Follow</h2>
+												<ul class="icons">
+													<li><a href="https://twitter.com/hamedArabah" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+													<li><a href="https://www.linkedin.com/in/hamedrabah/" class="icon style2 fa-linkedin"><span class="label">Dribbble</span></a></li>
+													<li><a href="https://github.com/hamedrabah" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+													<li> <a href="mailto:hr277@cornell.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+												</ul>
+											</section>
+											<ul class="copyright">
+												<li>&copy; Hamed Rabah</li>
+											</ul>
 										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+									</footer>
+							</div>
 
-			</div>
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/slider.js"></script>
-
-	</body>
-</html>
+		</body>
+	</html>
