--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Hamed Rabah</title>
@@ -25,12 +21,12 @@
 									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Hamed Rabah</span>
 								</a>
 
-							<!-- Nav -->
-								<nav>
+							<!-- Nav - might use in the future-->
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
@@ -59,7 +55,7 @@
 									<span class="image">
 										<img src="images/watson1.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a>
 										<h2>IBM Watson</h2>
 										<div class="content">
 											<p>Summer internship in product design at IBM Watson</p>
