--- a/d3.html
+++ b/d3.html
@@ -26,11 +26,11 @@
 								</a>
 
 							<!-- Nav -->
-								<nav>
+								<!-- <nav>
 									<ul>
 										<li><a href="#menu">Menu</a></li>
 									</ul>
-								</nav>
+								</nav> -->
 
 						</div>
 					</header>
@@ -80,13 +80,13 @@
 									The first idea we had was to have a grid of circles representing each film, and a slider that the user can utilize to filter movies by score. The X-axis would be the movie's budget and the Y-axis represents the revenue. On each corner of the graph would a commentary about how the film scores, so as an example: the corner of the graph representing a low budget and high revenue would be a indie success, a high budget and high revenue would be a blockbuster success, and a low budget and low grossing movie would mean "save your time!".
 								</p>
 								<p class="aa-para">
-									The second idea was to have the same axis, but rather than uniformly sized circles, have circles of different radius' representing how well the film scored on Rotten Tomatoes. As shown the second page of the second sketch, our thinking process was to first write down all of our available data and then brainstorm different ways we can use that data. We ultimately decided against this idea, but decided to incorporate parts of it such as the reviews. 
+									The second idea was to have the same axis, but rather than uniformly sized circles, have circles of different radius' representing how well the film scored on Rotten Tomatoes. As shown the second page of the second sketch, our thinking process was to first write down all of our available data and then brainstorm different ways we can use that data. We ultimately decided against this idea, but decided to incorporate parts of it such as the reviews.
 								</p>
 								<p class="aa-para">
 									The third idea was to have uniformly sized circles, but with various filters representing score, genre, and other factors. When a circle was clicked it would show a pop up displaying move information such as a quote from a review. We decided against this idea because it would require too much manual data entry, especially for the pop up portion.
 								</p>
 								<p class="aa-para">
-									The final direction we took was to take a hybrid approach that combined our favorite elements of the first and second design. We decided to keep the movie information of the 3rd idea, but move it to the top of the website right under the posters of a few select films. We keep the commentary on the corner of the graph from the first idea, but simplified it. 
+									The final direction we took was to take a hybrid approach that combined our favorite elements of the first and second design. We decided to keep the movie information of the 3rd idea, but move it to the top of the website right under the posters of a few select films. We keep the commentary on the corner of the graph from the first idea, but simplified it.
 								</p>
 								<p class="aa-para">
 									Here is what the final product looks like: <br/>
@@ -101,55 +101,31 @@
 						</div>
 					</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+					<!-- Footer -->
+						<footer id="footer">
+							<div class="inner">
+											<section>
+												<h2>Follow</h2>
+												<ul class="icons">
+													<li><a href="https://twitter.com/hamedArabah" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
+													<li><a href="https://www.linkedin.com/in/hamedrabah/" class="icon style2 fa-linkedin"><span class="label">Dribbble</span></a></li>
+													<li><a href="https://github.com/hamedrabah" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
+													<li> <a href="mailto:hr277@cornell.edu" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
+												</ul>
+											</section>
+											<ul class="copyright">
+												<li>&copy; Hamed Rabah</li>
+											</ul>
 										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="#" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon style2 fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon style2 fa-dribbble"><span class="label">Dribbble</span></a></li>
-									<li><a href="#" class="icon style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon style2 fa-500px"><span class="label">500px</span></a></li>
-									<li><a href="#" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon style2 fa-envelope-o"><span class="label">Email</span></a></li>
-								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+									</footer>
+							</div>
 
-			</div>
+			<!-- Scripts -->
+				<script src="assets/js/jquery.min.js"></script>
+				<script src="assets/js/browser.min.js"></script>
+				<script src="assets/js/breakpoints.min.js"></script>
+				<script src="assets/js/util.js"></script>
+				<script src="assets/js/main.js"></script>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+		</body>
+	</html>
